fix: layout breakpoints and responsiveness adjusted

--- a/src/css/components/common/Layout.css
+++ b/src/css/components/common/Layout.css
@@ -1,3 +1,4 @@
+/** global styles **/
 .errortext {
     text-align: left;
     color: red
@@ -24,93 +25,122 @@ input[type="date"] {
     border-radius: 4px;
 }
 
+/** layout styles **/
 .layout {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     min-height: 100vh;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    padding-left: 3rem;
-    padding-right: 3rem;
 }
-/**
-    if the min-height of the header is set to 100% then
-    it will take the height of the arrow back as the default height
 
-    if the min-height of the header is set to rems, 
-    it has to be higher than the maxHeight of the arrow back
-**/
 .header {
-    display:flex;
-    flex-direction: row;
+    display: flex;
     align-items: center;
+    flex-direction: row;
     justify-content: space-between;
-    min-width: 100% !important;
-    min-height: 3rem;
-    margin-left: -3rem; /** this has to be the same of the layout padding left negative **/
-    padding-left: 3rem; /** this has to be the same of the layout padding left **/
-    margin-right: -3rem; /** this has to be the same of the layout margin right negative **/
-    padding-right: 3rem; /** this has to be the same of the layout padding right **/
-    background-color: lightgrey;
+    width: 100%;
+    min-height: 4rem;
+    background-color: lightgray;
     position: fixed;
     top: 0;
+    padding-left: 2rem;
+    padding-right: 2rem;
     z-index: 1;
 }
 
-.headerleft {
+.content {
     display: flex;
-    align-content: flex-start;
-    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1 0 auto;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
 }
 
-.headerright {
+.footer {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-}
-
-.footer{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    min-width: 100% !important;
-    min-height: 3rem;
+    justify-content: center;
+    width: 100%;
+    min-height: 4rem;
     background-color: lightgray;
-    padding-left: 3rem; /** this value is the same of the layout padding left **/
-    padding-right: 3rem; /** this value is the same of the layout padding right **/
     position: fixed;
     bottom: 0;
-    right: 0rem; /** this value is necesary **/
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
+
 @media (min-width: 431px) {
-    .layout{
-        display: flex;
-        flex-direction: column;
-        padding-top: 5rem;
-        padding-bottom: 5rem;
-        padding-left: 5rem;
-        padding-right: 5rem;
-        margin-bottom: -2rem;/** this value is necesary **/
+    .header {
+        padding-left: 10%;
+        padding-right: 10%;
+        min-height: 6rem;
     }
 
-    .header {
-        margin-left: -5rem;
-        padding-left: 5rem;
-        margin-right: -5rem;
-        padding-right: 5rem;
+    .content {
+        padding-left: 10%;
+        padding-right: 10%;
+        margin-top: 6rem;
     }
 
     .footer {
-        display: flex;
-        position: relative;
-        padding-left: 5rem;
-        padding-right: 5rem;
-        margin-left: -5rem;
-        margin-right: -5rem;
-        margin-top: 3rem;
-        min-height: 5rem;
+        padding-left: 10%;
+        padding-right: 10%;
+        min-height: 6rem;
+        position: relative
+    }
+}
+
+@media (min-width: 768px) {
+    .header {
+        padding-left: 15%;
+        padding-right: 15%;
+    }
+
+    .content {
+        padding-left: 15%;
+        padding-right: 15%;
+    }
+
+    .footer {
+        padding-left: 15%;
+        padding-right: 15%;
+    }
+}
+
+@media (min-width: 900px) {
+    .header {
+        padding-left: 25%;
+        padding-right: 25%;
+    }
+
+    .content {
+        padding-left: 25%;
+        padding-right: 25%;
+    }
+
+    .footer {
+        padding-left: 25%;
+        padding-right: 25%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .header {
+       padding-left: 30%;
+        padding-right: 30%;
+    }
+
+    .content {
+        padding-left: 30%;
+        padding-right: 30%;
+    }
+
+    .footer {
+        padding-left: 30%;
+        padding-right: 30%;
     }
 }
